kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
---
apiVersion: v1
kind: Namespace
metadata:
  name: gc-example
  labels:
    name: gc-example
