kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gc-example-deployment
  namespace: gc-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gc-example
      type: web-service
  template:
    metadata:
      labels:
        app: gc-example
        type: web-service
    spec:
      volumes:
        - name: log-storages
          persistentVolumeClaim:
            claimName: gc-example-pvc
      containers:
        - name: gc-php-fpm-example
          image: judzhin/gc-php-fpm-example:v1
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/var/www/data/logs"
              name: log-storages
        - name: gc-nginx-example
          image: judzhin/gc-nginx-example:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
