kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gc-example-svc
  namespace: gc-example
spec:
  type: NodePort # need to remove
  selector:
    app: gc-example
    type: web-service
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32007 # need to remove
    protocol: TCP
